B&L QA/objects/Contact_Profile__c.object
<CustomObject>
    <fields>
        <fullName>First_Choice_Brand_MultiFocal__c</fullName>
        <label>First Choice Brand - MultiFocal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acuvue Bifocal</fullName>
                </value>
                <value>
                    <fullName>Acuvue Oasys for Presbyopia</fullName>
                </value>
                <value>
                    <fullName>Air Optix Aqua Multifocal</fullName>
                </value>
                <value>
                    <fullName>Biomedics/Proclear EP</fullName>
                </value>
                <value>
                    <fullName>Frequency 55 Multifocal</fullName>
                </value>
                <value>
                    <fullName>Proclear Multifocal</fullName>
                </value>
                <value>
                    <fullName>Purevision Multi-Focal</fullName>
                </value>
                <value>
                    <fullName>SofLens Multi-Focal</fullName>
                </value>
                <value>
                    <fullName>Proclear Multifocal Toric</fullName>
                </value>
                <value>
                    <fullName>Focus Progressives</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Choice_Brand_SVS__c</fullName>
        <label>First Choice Brand - SVS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acuvue 2</fullName>
                </value>
                <value>
                    <fullName>Acuvue Advance</fullName>
                </value>
                <value>
                    <fullName>Acuvue Oasys</fullName>
                </value>
                <value>
                    <fullName>Air Optix Aqua</fullName>
                </value>
                <value>
                    <fullName>Air Optix Night &amp; Day Aqua</fullName>
                </value>
                <value>
                    <fullName>Avaira</fullName>
                </value>
                <value>
                    <fullName>Biofinity</fullName>
                </value>
                <value>
                    <fullName>Biomedics 55</fullName>
                </value>
                <value>
                    <fullName>Frequency 55</fullName>
                </value>
                <value>
                    <fullName>O2Optix</fullName>
                </value>
                <value>
                    <fullName>Proclear Compatibles</fullName>
                </value>
                <value>
                    <fullName>PureVision SVS</fullName>
                </value>
                <value>
                    <fullName>SofLens 38</fullName>
                </value>
                <value>
                    <fullName>Encore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Choice_Brand_Toric__c</fullName>
        <label>First Choice Brand - Toric</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acuvue Advance for Astigmatism</fullName>
                </value>
                <value>
                    <fullName>Acuvue Oasys for Astigmatism</fullName>
                </value>
                <value>
                    <fullName>Acuvue Toric</fullName>
                </value>
                <value>
                    <fullName>Air Optix for Astigmatism</fullName>
                </value>
                <value>
                    <fullName>Biofinity Toric</fullName>
                </value>
                <value>
                    <fullName>Biomedics 55 Toric</fullName>
                </value>
                <value>
                    <fullName>Clearsight 1 Day Toric</fullName>
                </value>
                <value>
                    <fullName>Focus Dailies Toric</fullName>
                </value>
                <value>
                    <fullName>Focus Toric</fullName>
                </value>
                <value>
                    <fullName>Frequency 55 Toric</fullName>
                </value>
                <value>
                    <fullName>Preference Toric</fullName>
                </value>
                <value>
                    <fullName>Proclear Toric</fullName>
                </value>
                <value>
                    <fullName>PureVision Toric</fullName>
                </value>
                <value>
                    <fullName>SofLens Toric</fullName>
                </value>
                <value>
                    <fullName>Vertex Toric</fullName>
                </value>
                <value>
                    <fullName>Focus Torid</fullName>
                </value>
                <value>
                    <fullName>Encore Toric</fullName>
                </value>
                <value>
                    <fullName>Biomedics One Day Toric</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>IndiaSU field to collect gender information of physician</description>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hobby__c</fullName>
        <label>Hobby</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_is_Astigmatism_handled__c</fullName>
        <description>USSUR</description>
        <label>How is Astigmatism handled</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LRI</fullName>
                </value>
                <value>
                    <fullName>Laser</fullName>
                </value>
                <value>
                    <fullName>Toric Lens</fullName>
                </value>
                <value>
                    <fullName>Do Not Treat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IOL_Potential__c</fullName>
        <description>IOL Potential of a Doctor</description>
        <label>IOL Potential</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IOL_preference__c</fullName>
        <description>Used by EMEASU</description>
        <label>IOL preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pro-Hydrophobic</fullName>
                </value>
                <value>
                    <fullName>Pro-Hydrophilic</fullName>
                </value>
                <value>
                    <fullName>Indifferent</fullName>
                </value>
                <value>
                    <fullName>Hydrophobic</fullName>
                </value>
                <value>
                    <fullName>Hydrophilic</fullName>
                </value>
                <value>
                    <fullName>more-Phobic</fullName>
                </value>
                <value>
                    <fullName>more-Philic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Identification_Number__c</fullName>
        <label>Identification Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incision_Preference__c</fullName>
        <label>Incision Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Clear Cornea</fullName>
                </value>
                <value>
                    <fullName>Sclera Tunnel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Infinity_Use__c</fullName>
        <description>USSUR percentage usage</description>
        <label>Infinity % Use</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Injection__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the surgeon uses injection.
Used by EMEA SU.</description>
        <label>Injection?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KOL_Area__c</fullName>
        <description>What is the surgeon&apos;s expertise?
used by EMEA SU</description>
        <label>KOL - Area</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>KOL__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Cataract</fullName>
                </value>
                <value>
                    <fullName>IOL</fullName>
                </value>
                <value>
                    <fullName>PHACO</fullName>
                </value>
                <value>
                    <fullName>PHARMA</fullName>
                </value>
                <value>
                    <fullName>Premium IOL</fullName>
                </value>
                <value>
                    <fullName>Refractive</fullName>
                </value>
                <value>
                    <fullName>VR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KOL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this surgeon a Key Opinion Leader?
EMEA SU field</description>
        <inlineHelpText>Key Opinion Leader - a surgeon who influences their peers&apos; medical practice</inlineHelpText>
        <label>KOL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LRI_Calculator__c</fullName>
        <defaultValue>&quot;http://www.lricalculator.com/&quot;</defaultValue>
        <description>USSUR</description>
        <inlineHelpText>Click this link to access the LRI Calculator</inlineHelpText>
        <label>LRI Calculator</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Lasik_Center_Cost__c</fullName>
        <description>USSUR</description>
        <label>Lasik Center Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Legacy_System_Id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy System Id</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_System_Name__c</fullName>
        <label>Legacy System Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Use__c</fullName>
        <description>USSUR percentage used</description>
        <label>Legacy % Use</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Light_Fiber_Preference__c</fullName>
        <label>Light Fiber Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>STD FOCAL</fullName>
                </value>
                <value>
                    <fullName>Wide-Angle</fullName>
                </value>
                <value>
                    <fullName>Chandelier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MF_IOL__c</fullName>
        <label>MF IOL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Restor+3</fullName>
                </value>
                <value>
                    <fullName>Tecnis MTF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MF_Toric_Volume__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MF Toric Volume</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MICS_Expert__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the surgeon a MICS expert?
Used by EMEA SU.</description>
        <label>MICS Surgeon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MICS_Surgeon__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the surgeon a MICS expert? 
Used by EMEA SU.</description>
        <label>MICS Surgeon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MTF_IOL__c</fullName>
        <description>USSUR Multifocal IOL used</description>
        <label>MTF IOL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Restor+3</fullName>
                </value>
                <value>
                    <fullName>Tecnis MTF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MTF_Volume__c</fullName>
        <description>USSUR Multifocal volume</description>
        <formula>Premium_IOL_Volume__c *  What_of_Premium_IOL_is_MTF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MTF Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maintains_corneal_health_at_the_cellular__c</fullName>
        <description>ECS</description>
        <inlineHelpText>Maintains corneal health at the cellular level</inlineHelpText>
        <label>Maintains corneal health</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Millennium_Use__c</fullName>
        <description>USSUR percent usage</description>
        <label>Millennium % Use</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Millennium_with_MVE_Use__c</fullName>
        <description>USSUR</description>
        <label>Millennium with MVE % Use</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Minimal_Corneal_Staining__c</fullName>
        <description>ECS</description>
        <label>Minimal Corneal Staining</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monofocal_Volume__c</fullName>
        <description>USSUR</description>
        <label>Monofocal Volume</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Multifocal_Volume__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Multifocal Volume</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Not_Dispense_Renu_Val_1__c</fullName>
        <description>ECS</description>
        <formula>CASE(   Minimal_Corneal_Staining__c   ,&quot;1&quot;, 1, &quot;2&quot;, 2,&quot;3&quot;,3,&quot;4&quot;,4,&quot;5&quot;,5,0)</formula>
        <label>Not Dispense Renu Val 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Not_Dispense_Renu_Val_2__c</fullName>
        <description>ECS</description>
        <formula>CASE(   Bio_Compatibility_with_tear_film__c   ,&quot;1&quot;, 1, &quot;2&quot;, 2,&quot;3&quot;,3,&quot;4&quot;,4,&quot;5&quot;,5,0)</formula>
        <label>Not Dispense Renu Val 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Not_Dispense_Renu_Val_3__c</fullName>
        <description>ECS</description>
        <formula>CASE(    Protein_Management__c  ,&quot;1&quot;, 1, &quot;2&quot;, 2,&quot;3&quot;,3,&quot;4&quot;,4,&quot;5&quot;,5,0)</formula>
        <label>Not Dispense Renu Val 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Additional information about this contact. Used by EMEA SU.</description>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Nutr_Spt_for_patients_at_risk_for_AMD__c</fullName>
        <description>ECS</description>
        <label>Nutr Spt for patients at risk of AMD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ocuvite Adult 50+</fullName>
                </value>
                <value>
                    <fullName>ICAPS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OPTI_FREE_Replenish_pct__c</fullName>
        <defaultValue>0</defaultValue>
        <description>ECS</description>
        <label>OPTI-FREE Replenish %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OZ_Marker_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <description>USSUR</description>
        <label>OZ Marker Used?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operates__c</fullName>
        <description>USSUR</description>
        <inlineHelpText>How does this Surgeon operate?</inlineHelpText>
        <label>Operates</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Superior</fullName>
                </value>
                <value>
                    <fullName>Temporal</fullName>
                </value>
                <value>
                    <fullName>On steep-axis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Capsulorhexis__c</fullName>
        <description>USSUR</description>
        <inlineHelpText>Enter the Capsulorhexis if other</inlineHelpText>
        <label>Other Capsulorhexis</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Cataract_Equip_Use__c</fullName>
        <description>USSUR percentage used</description>
        <label>Other Cataract Equip % Use</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Other_Cataract_Equip_Used_fill_in__c</fullName>
        <description>USSUR</description>
        <label>Other Catarat Equip Used (fill in):</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Phaco_Machine__c</fullName>
        <description>USSUR</description>
        <inlineHelpText>Enter the Phaco Machine used if other</inlineHelpText>
        <label>Other Phaco Machine</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Phaco_Needle__c</fullName>
        <description>USSUR</description>
        <inlineHelpText>Enter the Phaco Needle used if Other</inlineHelpText>
        <label>Other Phaco Needle</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Primary_Monofocal_IOL__c</fullName>
        <description>USSUR - If other is selected, please enter details</description>
        <inlineHelpText>If the Primary Monofocal IOL is not listed, enter the Primary Monofocal IOL used</inlineHelpText>
        <label>Other Primary Monofocal IOL</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Primary_Viscoelastic__c</fullName>
        <description>USSUR</description>
        <inlineHelpText>If the Primary Viscoelastic is not listed, enter the Primary Viscoelastic used</inlineHelpText>
        <label>Other Primary Viscoelastic</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Secondary_Monofocal_IOL__c</fullName>
        <description>USSUR - If other is selected, please enter details</description>
        <inlineHelpText>If the Secondary Monofocal IOL is not listed, enter the Secondary Monofocal IOL used</inlineHelpText>
        <label>Other Secondary Monofocal IOL</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Secondary_Viscoelastic__c</fullName>
        <description>USSUR</description>
        <inlineHelpText>If the Secondary Viscoelastic is not listed, enter the Secondary Viscoelastic used</inlineHelpText>
        <label>Other Secondary Viscoelastic</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Technique_Anterior_Capsule__c</fullName>
        <description>CCP</description>
        <label>Other Technique – Anterior Capsule?</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Technique_Posterior_Capsule__c</fullName>
        <description>CCP</description>
        <label>Other Technique – Posterior Capsule?</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_VR_Equip_Use__c</fullName>
        <description>USSUR</description>
        <label>Other VR Equip % Use</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Other_VR_Equip_used_fill_in__c</fullName>
        <description>USSUR</description>
        <label>Other VR Equip used (fill in):</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_pct__c</fullName>
        <defaultValue>0</defaultValue>
        <description>ECS</description>
        <label>Other %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Outpatient_Days__c</fullName>
        <label>Outpatient Days</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mon</fullName>
                </value>
                <value>
                    <fullName>Tues</fullName>
                </value>
                <value>
                    <fullName>Wed</fullName>
                </value>
                <value>
                    <fullName>Thurs</fullName>
                </value>
                <value>
                    <fullName>Fri</fullName>
                </value>
                <value>
                    <fullName>Sat</fullName>
                </value>
                <value>
                    <fullName>Sun</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PHYSICIAN_SPECIALITY__c</fullName>
        <label>Physician Speciality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Glaucoma</fullName>
                </value>
                <value>
                    <fullName>Cornea</fullName>
                </value>
                <value>
                    <fullName>Retina</fullName>
                </value>
                <value>
                    <fullName>Uveitis</fullName>
                </value>
                <value>
                    <fullName>General Opthalmologist</fullName>
                </value>
                <value>
                    <fullName>Pedriatric</fullName>
                </value>
                <value>
                    <fullName>Oculoplastic</fullName>
                </value>
                <value>
                    <fullName>Pedriatric and Strabismus</fullName>
                </value>
                <value>
                    <fullName>Neuro Ophthalmologist</fullName>
                </value>
                <value>
                    <fullName>Pedriatric and Muscle</fullName>
                </value>
                <value>
                    <fullName>Low Vision</fullName>
                </value>
                <value>
                    <fullName>Fellow</fullName>
                </value>
                <value>
                    <fullName>Resident 1</fullName>
                </value>
                <value>
                    <fullName>Resident 2</fullName>
                </value>
                <value>
                    <fullName>Refractive and Low Vision</fullName>
                </value>
                <value>
                    <fullName>Resident  2</fullName>
                </value>
                <value>
                    <fullName>Pharmacist</fullName>
                </value>
                <value>
                    <fullName>Oculoplastic &amp; Reconstructive Surgery</fullName>
                </value>
                <value>
                    <fullName>General Opthalmologist,Refractive Surgery</fullName>
                </value>
                <value>
                    <fullName>Fellow Glaucoma</fullName>
                </value>
                <value>
                    <fullName>Fellow Cornea</fullName>
                </value>
                <value>
                    <fullName>Muscle</fullName>
                </value>
                <value>
                    <fullName>Resident1</fullName>
                </value>
                <value>
                    <fullName>Resident2</fullName>
                </value>
                <value>
                    <fullName>Resident3</fullName>
                </value>
                <value>
                    <fullName>Fellow Retina</fullName>
                </value>
                <value>
                    <fullName>Fellow Oculoplastic</fullName>
                </value>
                <value>
                    <fullName>Fellow Muscle</fullName>
                </value>
                <value>
                    <fullName>Phato</fullName>
                </value>
                <value>
                    <fullName>OPRC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Paracentesis_Blade__c</fullName>
        <description>USSUR</description>
        <inlineHelpText>What Paracentesis Blade does this Surgeon use?</inlineHelpText>
        <label>Paracentesis Blade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Steel - B+L</fullName>
                </value>
                <value>
                    <fullName>Steel - Novartis (Alcon)</fullName>
                </value>
                <value>
                    <fullName>Steel - Diamatrix</fullName>
                </value>
                <value>
                    <fullName>Steel - BD</fullName>
                </value>
                <value>
                    <fullName>Steel - Sharpoint</fullName>
                </value>
                <value>
                    <fullName>Steel - Visitec</fullName>
                </value>
                <value>
                    <fullName>Steel - Other</fullName>
                </value>
                <value>
                    <fullName>Diamond - Storz (B+L)</fullName>
                </value>
                <value>
                    <fullName>Diamond - Duckworth &amp; Kent</fullName>
                </value>
                <value>
                    <fullName>Diamond - Diamatrix</fullName>
                </value>
                <value>
                    <fullName>Diamond - Rhein</fullName>
                </value>
                <value>
                    <fullName>Diamond - Other</fullName>
                </value>
                <value>
                    <fullName>Femto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Paracentisis_Blade_Size_in_MM__c</fullName>
        <inlineHelpText>What is the size in mm of the Paracentesis Blade the Surgeon uses?</inlineHelpText>
        <label>Paracentisis Blade Size in MM</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patients_w_Moderate_to_Advanced_AMD__c</fullName>
        <description>ECS</description>
        <label>Patients w/ Moderate to Advanced AMD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PreserVision AREDS</fullName>
                </value>
                <value>
                    <fullName>ICAPS AREDS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phaco_Machine__c</fullName>
        <description>USSUR</description>
        <inlineHelpText>Select the Phaco Machine that the Surgeon Uses</inlineHelpText>
        <label>Phaco Machine</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>B+L Stellaris Anterior - Vacuum</fullName>
                </value>
                <value>
                    <fullName>B+L Stellaris Anterior - Peristaltic</fullName>
                </value>
                <value>
                    <fullName>B+L Stellaris PC - Vacuum</fullName>
                </value>
                <value>
                    <fullName>B+L Stellaris PC - Peristaltic</fullName>
                </value>
                <value>
                    <fullName>B+L Millenium</fullName>
                </value>
                <value>
                    <fullName>Novartis(Alcon) Infinity Torsional</fullName>
                </value>
                <value>
                    <fullName>Novartis(Alcon) Infinity No Torsional</fullName>
                </value>
                <value>
                    <fullName>Novartis(Alcon) Infinity Other</fullName>
                </value>
                <value>
                    <fullName>Novartis(Alcon) Legacy</fullName>
                </value>
                <value>
                    <fullName>Abbott(AMO) Whitestar Ellips</fullName>
                </value>
                <value>
                    <fullName>Abbott(AMO) Whitestar Standard</fullName>
                </value>
                <value>
                    <fullName>Abbott(AMO) Compact Ellips</fullName>
                </value>
                <value>
                    <fullName>Abbott(AMO) Compact Standard</fullName>
                </value>
                <value>
                    <fullName>Abbott(AMO) Sovereign</fullName>
                </value>
                <value>
                    <fullName>Abbott(AMO) Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phaco_Needle__c</fullName>
        <description>USSUR</description>
        <inlineHelpText>Select the Phaco Needle this Surgeon uses</inlineHelpText>
        <label>Phaco Needle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>B+L  - MICS</fullName>
                </value>
                <value>
                    <fullName>B+L  - Microflow</fullName>
                </value>
                <value>
                    <fullName>B+L  - Microflow Plus</fullName>
                </value>
                <value>
                    <fullName>B+L  - Thin Tip</fullName>
                </value>
                <value>
                    <fullName>B+L  - Standard</fullName>
                </value>
                <value>
                    <fullName>Novartis(Alcon)  - Other</fullName>
                </value>
                <value>
                    <fullName>Abbott  - Other</fullName>
                </value>
                <value>
                    <fullName>MST  - Other</fullName>
                </value>
                <value>
                    <fullName>Other - Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>